stop center align

--- a/assets/sass/components/_banner.scss
+++ b/assets/sass/components/_banner.scss
@@ -296,7 +296,6 @@
 
 		@include orientation(portrait) {
 			@include vendor('flex-direction', 'column-reverse');
-			text-align: center;
 
 			.content {
 				@include vendor('display', 'flex');
